--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,9 @@
     "version": "0.1.0",
     "command": "npm",
     "isShellCommand": true,
+    "args": ["-w", "-p", "."],
     "showOutput": "always",
     "suppressTaskName": true,
+    "isWatching": false,
     "tasks": []
 }
