--- a/.editorconfig
+++ b/.editorconfig
@@ -5,15 +5,13 @@
 root = true;
 
 [*]
-#  Ensure there's no lingering whitespace
-trim_trailing_whitespace = true
-# Ensure a newline at the end of each file
-# Commented out because it blows up tests in colorful ways
-# insert_final_newline = true
-
-[*.js]
-# Unix-style newlines
-end_of_line = lf
 charset = utf-8
 indent_style = space
 indent_size = 2
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
