--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,42 +1,7 @@
 {
   "version": "0.2.0",
   "configurations": [
-    {
-      "name": "Unit Tests",
-      "type": "node",
-      "request": "launch",
-      "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-      "stopOnEntry": false,
-      "args": [
-        "--timeout",
-        "999999"
-      ],
-      "cwd": "${workspaceRoot}",
-      "runtimeArgs": [],
-      "env": {},
-      "sourceMaps": true,
-      "outDir": "${workspaceRoot}/out"
-    },
-    {
-      "name": "Stacks Tests",
-      "type": "node",
-      "request": "launch",
-      "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-      "stopOnEntry": false,
-      "args": [
-        "--timeout",
-        "999999",
-        "--colors",
-        "-g",
-        "Stacks"
-      ],
-      "cwd": "${workspaceRoot}",
-      "runtimeArgs": [],
-      "env": {},
-      "sourceMaps": true,
-      "outDir": "${workspaceRoot}/out"
-    },
-    {
+     {
       "name": "Launch",
       "type": "node",
       "request": "launch",
@@ -64,8 +29,8 @@
       "address": "localhost",
       "restart": false,
       "sourceMaps": false,
-      "outDir": null,
       "localRoot": "${workspaceRoot}",
+      "outDir": "${workspaceRoot}/debug",
       "remoteRoot": null
     }
   ]
