--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.8.6",
+  "version": "0.8.7",
   "description": "A very fast, and small sized TypeScript 2.0 Pre boilerplate. Tests in Mocha & Chai. TSLint for better code quality",
   "main": "dist/sikky.js",
   "jsnext:main": "dist/sikky.mjs",
@@ -75,9 +75,9 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-rollup-preprocessor": "^2.0.2",
     "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.3",
+    "karma-mocha-reporter": "^2.0.4",
     "lolex": "^1.5.0",
-    "mocha": "^2.5.2",
+    "mocha": "^2.5.3",
     "rollup": "^0.31.2",
     "rollup-plugin-buble": "^0.11.0",
     "rollup-plugin-commonjs": "^3.0.0",
@@ -91,7 +91,7 @@
     "sinon-chai": "^2.8.0",
     "source-map": "^0.5.6",
     "source-map-support": "^0.4.0",
-    "tslint": "next",
+    "tslint": "^3.11.0",
     "typescript": "next",
     "typings": "^1.1.0"
   }
