--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compileOnSave": false,
   "compilerOptions":
   {
+    "types": ["mocha", "chai", "sinon"],
     "allowJs": false,
     "allowUnreachableCode": false,
     "noImplicitAny": true,
