--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.8.8",
+  "version": "0.9.0",
   "description": "A very fast, and small sized TypeScript 2.0 Pre boilerplate. Tests in Mocha & Chai. TSLint for better code quality",
   "main": "dist/sikky.js",
   "jsnext:main": "dist/sikky.mjs",
@@ -43,56 +43,61 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run lint:src && npm run build:dev && npm run build:prod",
+    "build": "npm run build:dev && npm run build:prod",
     "build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js",
     "build:prod": "cross-env NODE_ENV=production rollup -c rollup.config.js",
-    "clean": "rm -rf coverage/ dist/ build/",
-    "clean:build": "rm -rf build/",
+    "build:vscode": "tsc src/sikky.ts --outDir dist -t es5 --m umd --declaration --skipLibCheck --sourceMap",
+    "build:watch": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck -- watch",
+    "clean": "rimraf ./coverage/ ./dist/ ./build/",
+    "clean:build": "rimraf ./build/",
     "clean:dist": "rm -rf dist/",
-    "lint:src": "tslint src/**/*.tsx src/**/*.ts --ignore-path .gitignore",
-    "lint:tests": "tslint tests/**/*.tsx tests/**/*.ts --ignore-path .gitignore",
-    "prebuild": "tsc src/sikky.ts --sourcemap --outDir build -t es5 --m es6 --declaration --skipLibCheck",
-    "pretest": "rollup -c rollup.mocha.config.js",
+    "debug": "npm-run-all clean build:vscode",
+    "prebuild": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck",
     "test": "npm run test:browser && npm run test:node",
     "test:browser": "cross-env NODE_ENV=test karma start karma.conf.js --no-auto-watch --single-run",
-    "test:node": "cross-env NODE_ENV=test mocha ./build/test-bundle.js --compilers js:buble/register",
-    "tdd": "cross-env NODE_ENV=test karma start karma.conf.js --auto-watch",
-    "watch": "tsc src/sikky.ts --sourcemap --outDir build -t es5 --m es6 --declaration --skipLibCheck --w"
-  },
-  "dependencies": {},
+    "test:node": "mocha --recursive  test/node-tests/**/*.ts --require ts-node/register",
+    "tdd:browser": "cross-env NODE_ENV=test karma start karma.conf.js --auto-watch",
+    "tdd:node": "mocha test/node-tests/**/*.ts --require ts-node/register --watch --watch-extensions ts",
+    "lint:src": "tslint src/**/*.tsx src/**/*.ts --ignore-path .gitignore",
+    "lint:tests": "tslint test/**/*.tsx test/**/*.ts --ignore-path .gitignore"
+ },
   "devDependencies": {
-    "@types/mocha": "^2.2.21-alpha",
     "@types/chai": "^3.4.22-alpha",
+    "@types/mocha": "^2.2.21-alpha",
     "@types/sinon": "^1.16.20-alpha",
     "@types/sinon-chai": "^2.7.20-alpha",
-    "chai": "^3.5.0",
+    "chai": "^3.4.1",
     "cross-env": "^1.0.8",
-    "karma": "^0.13.22",
+    "coveralls": "^2.11.9",
+     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-sinon-chai": "^1.2.0",
     "karma-coveralls": "^1.1.2",
     "karma-coverage": "^1.0.0",
     "karma-chrome-launcher": "^1.0.1",
-    "karma-sourcemap-loader": "^0.3.7",
     "karma-rollup-preprocessor": "^2.0.2",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
     "lolex": "^1.5.0",
     "mocha": "^2.5.3",
+    "npm-run-all": "^2.1.1",
     "rollup": "^0.31.2",
     "rollup-plugin-buble": "^0.11.0",
     "rollup-plugin-commonjs": "^3.0.0",
-    "rollup-plugin-replace": "^1.1.0",
-    "rollup-plugin-uglify": "^1.0.0",
     "rollup-plugin-multi-entry": "^1.4.0",
     "rollup-plugin-istanbul": "^1.0.0",
+    "rollup-plugin-strip": "^1.0.3",
     "rollup-plugin-node-resolve": "^1.7.0",
+    "rollup-plugin-replace": "^1.1.0",
     "rollup-plugin-typescript": "^0.7.5",
+    "rollup-plugin-uglify": "^1.0.0",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
-    "source-map": "^0.5.6",
-    "source-map-support": "^0.4.0",
+    "rimraf": "^2.5.2",
+    "ts-node": "^0.9.1",
     "tslint": "^3.11.0",
     "typescript": "next"
-  }
+  },
+  "dependencies": {}
 }
