--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "sikky",
-  "version": "0.9.0",
+  "version": "0.9.2",
   "description": "TypeScript 2.0 Pre boilerplate for node and the browser. Tests in Mocha & Chai. TSLint for better code quality",
-  "main": "dist/sikky.js",
-  "jsnext:main": "dist/sikky.mjs",
+  "main": "dist/sikky.es5.js",
+  "jsnext:main": "dist/sikky.js",
   "author": "KFlash",
   "homepage": "https://github.com/kflash/sikky",
   "license": "MIT",
@@ -53,7 +53,7 @@
     "build:watch": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck -- watch",
     "clean": "rimraf ./coverage/ ./dist/ ./build/",
     "clean:build": "rimraf ./build/",
-    "clean:dist": "rm -rf dist/",
+    "clean:dist": "rimraf dist/",
     "debug": "npm-run-all clean build:vscode",
     "prebuild": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck",
     "test": "npm run test:browser && npm run test:node",
@@ -69,7 +69,7 @@
     "@types/mocha": "^2.2.21-alpha",
     "@types/sinon": "^1.16.20-alpha",
     "@types/sinon-chai": "^2.7.20-alpha",
-    "chai": "^3.4.1",
+    "chai": "^3.5.0",
     "cross-env": "^1.0.8",
     "coveralls": "^2.11.9",
     "karma": "^0.13.22",
@@ -84,7 +84,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "lolex": "^1.5.0",
     "mocha": "^2.5.3",
-    "npm-run-all": "^2.1.1",
+    "npm-run-all": "^2.1.2",
     "rollup": "^0.31.2",
     "rollup-plugin-buble": "^0.11.0",
     "rollup-plugin-commonjs": "^3.0.0",
