better integration with VSCode

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.9.2",
+  "version": "0.9.4",
   "description": "TypeScript 2.0 Pre boilerplate for node and the browser. Tests in Mocha & Chai. TSLint for better code quality",
   "main": "dist/sikky.es5.js",
   "jsnext:main": "dist/sikky.js",
@@ -25,6 +25,8 @@
     "jsx",
     "tsx",
     "vscode",
+    "node",
+    "nodejs",
     "ts-node",
     "tslint",
     "jsnext",
@@ -46,15 +48,14 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run build:dev && npm run build:prod",
+    "build": "npm run lint:src && npm run build:dev && npm run build:prod",
     "build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js",
     "build:prod": "cross-env NODE_ENV=production rollup -c rollup.config.js",
-    "build:vscode": "tsc src/sikky.ts --outDir dist -t es5 --m umd --declaration --skipLibCheck --sourceMap",
     "build:watch": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck -- watch",
     "clean": "rimraf ./coverage/ ./dist/ ./build/",
     "clean:build": "rimraf ./build/",
     "clean:dist": "rimraf dist/",
-    "debug": "npm-run-all clean build:vscode",
+    "debug": "tsc src/sikky.ts --outDir dist -t es5 --m umd --declaration --skipLibCheck --sourceMap",
     "prebuild": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck",
     "test": "npm run test:browser && npm run test:node",
     "test:browser": "cross-env NODE_ENV=test karma start karma.conf.js --no-auto-watch --single-run",
