--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "description": "TypeScript 2.0 Pre boilerplate for node and the browser. Tests in Mocha & Chai. TSLint for better code quality",
   "main": "dist/sikky.es5.js",
   "jsnext:main": "dist/sikky.js",
@@ -52,18 +52,22 @@
     "build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js",
     "build:prod": "cross-env NODE_ENV=production rollup -c rollup.config.js",
     "build:watch": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck -- watch",
+    "build:vcode": "tsc src/sikky.ts --outDir dist -t es5 --m umd --declaration --skipLibCheck --sourceMap",
     "clean": "rimraf ./coverage/ ./dist/ ./build/",
     "clean:build": "rimraf ./build/",
     "clean:dist": "rimraf dist/",
-    "debug": "tsc src/sikky.ts --outDir dist -t es5 --m umd --declaration --skipLibCheck --sourceMap",
+    "debug": "npm-run-all clean build:vcode",
     "prebuild": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck",
+    "postpublish": "git push origin master --follow-tags",
     "test": "npm run test:browser && npm run test:node",
     "test:browser": "cross-env NODE_ENV=test karma start karma.conf.js --no-auto-watch --single-run",
-    "test:node": "mocha --recursive  test/node-tests/**/*.ts --require ts-node/register",
+    "test:node": "npm run lint:tests && mocha --recursive  test/node-tests/**/*.ts --require ts-node/register -R spec --bail",
     "tdd:browser": "cross-env NODE_ENV=test karma start karma.conf.js --auto-watch",
-    "tdd:node": "mocha test/node-tests/**/*.ts --require ts-node/register --watch --watch-extensions ts",
+    "tdd:node": "mocha test/node-tests/**/*.ts --require ts-node/register -w --watch-extensions ts",
     "lint:src": "tslint src/**/*.tsx src/**/*.ts --ignore-path .gitignore",
-    "lint:tests": "tslint test/**/*.tsx test/**/*.ts --ignore-path .gitignore"
+    "lint:tests": "tslint test/**/*.tsx test/**/*.ts --ignore-path .gitignore",
+    "dependencies:check": "ncu",
+    "dependencies:upgrade": "ncu -u"
  },
   "devDependencies": {
     "@types/chai": "^3.4.22-alpha",
@@ -86,6 +90,7 @@
     "lolex": "^1.5.0",
     "mocha": "^2.5.3",
     "npm-run-all": "^2.1.2",
+    "npm-check-updates": "^2.6.7",
     "rollup": "^0.31.2",
     "rollup-plugin-buble": "^0.11.0",
     "rollup-plugin-commonjs": "^3.0.0",
