environment variabel fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.9.11",
+  "version": "0.10.0",
   "description": "TypeScript 2.0 Pre boilerplate for node and the browser. Tests in Mocha & Chai. TSLint for better code quality",
   "main": "dist/sikky.es5.js",
   "jsnext:main": "dist/sikky.js",
@@ -49,19 +49,19 @@
     "build:prod": "cross-env NODE_ENV=production rollup -c ./config/rollup.config.js",
     "build:watch": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck -- watch",
     "build:vcode": "tsc src/sikky.ts --outDir dist -t es5 --m umd --declaration --skipLibCheck --sourceMap",
-    "clean": "rimraf ./coverage/ ./dist/ ./build/",
-    "clean:build": "rimraf ./build/",
-    "clean:dist": "rimraf dist/",
-    "debug": "npm-run-all clean:build build:vcode",
+    "clean": "rimraf coverage dist build",
+    "clean:build": "rimraf build",
+    "clean:dist": "rimraf dist",
+    "debug": "cross-env NODE_ENV=debug npm-run-all clean:build build:vcode",
     "dependencies:check": "ncu",
     "dependencies:upgrade": "ncu -u",
     "prebuild": "tsc src/sikky.ts --outDir dist -t es5 --m es6 --declaration --skipLibCheck",
     "postpublish": "git push origin master --follow-tags",
     "test": "npm run test:browser && npm run test:node",
     "test:browser": "cross-env NODE_ENV=test karma start ./config/karma.config.js --no-auto-watch --single-run",
-    "test:node": "npm run lint:tests && mocha --recursive  test/node-tests/**/*.ts --require ts-node/register -R spec --bail",
+    "test:node": "cross-env NODE_ENV=test npm run lint:tests && mocha --recursive  test/node-tests/**/*.ts --require ts-node/register -R spec --bail",
     "tdd:browser": "cross-env NODE_ENV=test karma start ./config/karma.config.js --auto-watch",
-    "tdd:node": "mocha test/node-tests/**/*.ts --require ts-node/register -w --watch-extensions ts",
+    "tdd:node": "cross-env NODE_ENV=test mocha test/node-tests/**/*.ts --require ts-node/register -w --watch-extensions ts",
     "lint:src": "tslint src/**/*.tsx src/**/*.ts --ignore-path .gitignore",
     "lint:tests": "tslint test/**/*.tsx test/**/*.ts --ignore-path .gitignore"
   },
@@ -104,5 +104,14 @@
     "tslint": "^3.11.0",
     "typescript": "next"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "npmName": "sikky",
+  "npmFileMap": [
+    {
+      "basePath": "/dist/",
+      "files": [
+        "*.js"
+      ]
+    }
+  ]
 }
