--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,10 @@
   "jscs.enable": false,
   "jshint.enable": false,
   "search.exclude": {
-    "**/node_modules": true
+    "**/node_modules": true,
+		"build/**": true,
+		"out*/**": true,
+		"extensions/**/out/**": true
   },
   "tslint.enable": true,
 
