--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,11 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "0.1.0",
+    "windows": {},
+    "osx": {},
+    "linux": {},
     "command": "npm",
     "isShellCommand": true,
-    "showOutput": "always",
     "suppressTaskName": true,
     "tasks": [
         {
