--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,22 @@ os:
   - linux
   - osx
 
+android:
+  components:
+    - platform-tools
+    - tools
+    - build-tools-23.0.3
+    - android-$EMULATOR_API_VER
+     # The SDK version used to compile your project
+    - android-23
+     # Additional components
+    - extra-google-google_play_services
+    - extra-android-support
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-$EMULATOR_API_VER
+    - addon-google_apis-google-23
+
 addons:
 #  firefox: "38.0"
   apt:
